--- a/Hotels/montana-master/elements.html
+++ b/Hotels/montana-master/elements.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Montana</title>
+	<title>WebJini</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -62,11 +62,11 @@
                             </div>
                         </div>
                         <div class="col-xl-2 col-lg-2">
-                            <div class="logo-img">
+                            <!-- <div class="logo-img">
                                 <a href="index.html">
                                     <img src="img/logo.png" alt="">
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="col-xl-5 col-lg-4 d-none d-lg-block">
                             <div class="book_room">
@@ -139,7 +139,7 @@
 	<!-- End Sample Area -->
 
 	<!-- Start Button -->
-	<section class="button-area">
+	<!-- <section class="button-area">
 		<div class="container box_1170 border-top-generic">
 			<h3 class="text-heading">Sample Buttons</h3>
 			<div class="button-group-area">
@@ -239,7 +239,7 @@
 				<a href="#" class="genric-btn primary-border small">Small</a>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- End Button -->
 
 	<!-- Start Align Area -->
@@ -771,8 +771,8 @@
                             <h3 class="footer_title">
                                 address
                             </h3>
-                            <p class="footer_text" >  200, Green road, Mongla, <br>
-                                    New Yor City USA</p>
+                            <p class="footer_text" >  Dhampur , Uttar Pradesh <br>
+                                    India</p>
                             <a href="#" class="line-button">Get Direction</a>
                         </div>
                     </div>
@@ -781,8 +781,8 @@
                             <h3 class="footer_title">
                                     Reservation
                             </h3>
-                            <p class="footer_text" >+10 367 267 2678 <br>
-                                    reservation@montana.com</p>
+                            <p class="footer_text" >+91 7983124455<br>
+                                    reservation@WebJini.com</p>
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-6 col-lg-2">
@@ -819,9 +819,9 @@
                 <div class="row">
                     <div class="col-xl-8 col-md-7 col-lg-9">
                         <p class="copy_right">
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                <!-- Link back to WebJini can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://WebJini.com" target="_blank">WebJini</a>
+<!-- Link back to WebJini can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
                     <div class="col-xl-4 col-md-5 col-lg-3">
