--- a/Hotels/radission-gh-pages/contact.html
+++ b/Hotels/radission-gh-pages/contact.html
@@ -127,7 +127,7 @@
                         </div>
                         <div class="info_item">
                             <i class="lnr lnr-envelope"></i>
-                            <h6><a href="#">support@colorlib.com</a></h6>
+                            <h6><a href="#">support@WebJini.com</a></h6>
                             <p>Send us your query anytime!</p>
                         </div>
                     </div>
@@ -245,9 +245,9 @@
             </div>
             <div class="footer-bottom d-flex justify-content-between align-items-center flex-wrap">
                 <div>
-                    <p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                    <p class="footer-text m-0"><!-- Link back to WebJini can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://WebJini.com" target="_blank">WebJini</a>
+<!-- Link back to WebJini can't be removed. Template is licensed under CC BY 3.0. --></p>
                 </div>
                 <div class="footer-social d-flex align-items-center">
                     <a href="#"><i class="fa fa-facebook"></i></a>
